Release eumw-1.2.0